--- a/site/Dockerfile.dev
+++ b/site/Dockerfile.dev
@@ -7,7 +7,8 @@ WORKDIR /app
 
 # Install dependancies
 COPY package.json package-lock.json ./
-RUN npm install
+# RUN npm install
+RUN npm ci
 
 # Copy the source code
 COPY . .
