--- a/site/package.json
+++ b/site/package.json
@@ -16,12 +16,16 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "fusionable": "^0.1.3",
     "lucide-react": "^0.555.0",
     "next": "^16.0.10",
     "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-markdown": "^10.1.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
+    "showdown": "^2.1.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
@@ -30,6 +34,7 @@
     "@types/pg": "^8.16.0",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19",
+    "@types/showdown": "^2.0.6",
     "autoprefixer": "^10.4.22",
     "eslint": "^9",
     "eslint-config-next": "16.0.5",
