--- a/site/package.json
+++ b/site/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "fs": "^0.0.1-security",
     "fusionable": "^0.1.3",
     "lucide-react": "^0.555.0",
     "next": "^16.0.10",
