--- a/site/package.json
+++ b/site/package.json
@@ -30,8 +30,7 @@
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "showdown": "^2.1.0",
-    "tailwind-merge": "^3.4.0",
-    "tsx": "^4.21.0"
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -45,6 +44,7 @@
     "eslint-config-next": "16.0.5",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17",
+    "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
   }
